<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_bookmark_black_24dp"
        android:title="@string/title_bookmark"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"/>

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/title_maps"/>
</menu>
