<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.linhnv.foodsy.activity.UpdateInfoActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />
    <ImageView
        android:id="@+id/image_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/camera"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/image_avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/image_avatar"
        android:textSize="18dip"
        android:gravity="center"/>
    <EditText
        android:id="@+id/edit_text_fullname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        android:layout_marginLeft="@dimen/margin_0dp"
        app:layout_constraintRight_toRightOf="@id/guideline4"
        android:layout_marginRight="@dimen/margin_0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:hint="@string/full_name"
        android:background="@drawable/textview_ui1"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        android:layout_marginLeft="@dimen/margin_0dp"
        app:layout_constraintRight_toRightOf="@id/guideline4"
        android:layout_marginRight="@dimen/margin_0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:hint="@string/email"
        android:background="@drawable/textview_ui1"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/edit_text_address"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        android:layout_marginLeft="@dimen/margin_0dp"
        app:layout_constraintRight_toRightOf="@id/guideline4"
        android:layout_marginRight="@dimen/margin_0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:hint="@string/address"
        android:background="@drawable/textview_ui1"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline6"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        android:layout_marginLeft="@dimen/margin_0dp"
        app:layout_constraintRight_toRightOf="@id/guideline4"
        android:layout_marginRight="@dimen/margin_0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline7"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:hint="@string/phone"
        android:background="@drawable/textview_ui1"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="phone"/>
    <LinearLayout
        android:id="@+id/linear_sex"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/guideline7"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="@id/guideline4"
        app:layout_constraintBottom_toBottomOf="@id/guideline8">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender"
            android:textSize="17dip"
            android:layout_marginTop="@dimen/margin_8dp"/>
        <RadioGroup
            android:id="@+id/radio_sex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginLeft="@dimen/margin_16dp"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/button_update_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline8"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline3"
        app:layout_constraintRight_toRightOf="@id/guideline4"
        app:layout_constraintBottom_toBottomOf="@id/guideline9"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:text="@string/update_info"
        android:background="@drawable/bg_button_selected1"
        android:textColor="@color/colorWhite"/>
</android.support.constraint.ConstraintLayout>
