<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.linhnv.foodsy.activity.SignUpActivity">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidel7"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline10"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline11"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline12"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline13"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline15"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin_0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/margin_0dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/imgCloseSignUp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back"
            android:layout_marginLeft="@dimen/margin_16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register"
            android:gravity="center"
            android:layout_marginRight="46dp"
            android:textSize="@dimen/text_size_19dip"
            android:textStyle="bold"/>
    </LinearLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />


    <EditText
        android:id="@+id/edtUsername_signup"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:hint="@string/username"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/guideline10"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        android:layout_marginLeft="0dp"
        app:layout_constraintRight_toRightOf="@id/guideline3"
        android:layout_marginRight="@dimen/margin_0dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:background="@drawable/textview_ui1"/>

    <EditText
        android:id="@+id/edtPass_signup"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/edtUsername_signup"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        android:layout_marginLeft="@dimen/margin_0dp"
        app:layout_constraintRight_toRightOf="@id/guideline3"
        android:layout_marginRight="@dimen/margin_0dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:hint="@string/password"
        android:gravity="center"
        android:background="@drawable/textview_ui1"
        android:imeOptions="actionNext"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/edtConfirmPass_signup"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/edtPass_signup"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        android:layout_marginLeft="@dimen/margin_0dp"
        app:layout_constraintRight_toRightOf="@id/guideline3"
        android:layout_marginRight="@dimen/margin_0dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:hint="@string/confirm_password"
        android:gravity="center"
        android:background="@drawable/textview_ui1"
        android:imeOptions="actionDone"
        android:inputType="textPassword"/>


    <Button
        android:id="@+id/btnSignUp_signup"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/edtConfirmPass_signup"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/sign_up"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        android:layout_marginLeft="@dimen/margin_0dp"
        app:layout_constraintRight_toRightOf="@id/guideline3"
        android:layout_marginRight="@dimen/margin_0dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:background="@drawable/bg_button_selected1"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/text_view_ors"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp_signup"
        android:layout_marginBottom="@dimen/margin_4dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        android:layout_marginLeft="@dimen/margin_0dp"
        app:layout_constraintRight_toRightOf="@id/guideline3"
        android:layout_marginRight="@dimen/margin_0dp"
        android:text="@string/or"
        android:gravity="center"/>
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />
    <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
        android:id="@+id/button_login_fb_signup"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_button_selected3"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:textColor="@color/colorWhite"
        facebook:com_facebook_login_text="@string/sign_in_facebook"
        facebook:layout_constraintLeft_toLeftOf="@id/guideline2"
        facebook:layout_constraintRight_toRightOf="@id/guideline3"
        facebook:layout_constraintTop_toBottomOf="@id/text_view_ors"
        facebook:layout_goneMarginBottom="@dimen/margin_8dp"
        app:layout_constraintHorizontal_bias="0.0"/>

    <Button
        android:id="@+id/btnLoginPhone_signup"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/button_login_fb_signup"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        android:layout_marginLeft="@dimen/margin_0dp"
        app:layout_constraintRight_toRightOf="@id/guideline3"
        android:text="@string/sign_in_phone"
        android:background="@drawable/bg_button_selected2"
        android:textColor="@color/colorWhite"/>
</android.support.constraint.ConstraintLayout>
