<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>
    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>
    <ImageView
        android:id="@+id/image_view_photo_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        android:layout_margin="@dimen/margin_8dp"
        android:src="@drawable/bglogin5"
        android:scaleType="centerCrop"/>
    <Button
        android:id="@+id/button_ready_detail"
        android:layout_width="0dp"
        android:layout_height="34dp"
        app:layout_constraintTop_toBottomOf="@id/image_view_photo_detail"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="@id/guideline3"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_selected4"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_8dp"
        android:textSize="18dip"/>

    <TextView
        android:id="@+id/text_view_foodMenu"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/button_ready_detail"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:gravity="center_vertical"
        android:text="@string/food_menu"/>
    <TextView
        android:id="@+id/text_view_placeReviews"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/button_ready_detail"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/place_review"
        android:gravity="center_vertical"
        android:layout_marginRight="@dimen/margin_16dp"/>

    <TextView
        android:id="@+id/text_view_placeDetail"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/button_ready_detail"
        android:layout_marginTop="@dimen/margin_8dp"
        app:layout_constraintLeft_toRightOf="@id/text_view_foodMenu"
        app:layout_constraintRight_toLeftOf="@id/text_view_placeReviews"
        android:gravity="center_vertical"
        android:text="@string/place_detail"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_foodMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_foodMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_foodReviews"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_foodMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>